[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/T_Door.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Miscs/T_Door/T_Door1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Miscs/T_Door/T_Door2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Miscs/T_Door/T_Door3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Miscs/T_Door/T_Door4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Miscs/T_Door/T_DoorCl_change1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Miscs/T_Door/T_DoorCl_change2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Miscs/T_Door/T_DoorCl_change3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Miscs/T_Door/T_DoorCl_change4.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Miscs/T_Door/T_DoorOp_change1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Miscs/T_Door/T_DoorOp_change2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Miscs/T_Door/T_DoorOp_change3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Miscs/T_Door/T_DoorOp_change4.png" type="Texture" id=13]
[ext_resource path="res://Sound/doorOpen_2.ogg" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "ClosedChange",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "OpenChange",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 18 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19, 4 )

[sub_resource type="Animation" id=4]
resource_name = "OpenDoor"
tracks/0/type = "method"
tracks/0/path = NodePath("AudioOpenDoor")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[node name="T_Door" type="StaticBody2D" groups=[
"changeable",
"door",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "ClosedChange"

[node name="T_CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="P_CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.106926, -1.90154 )
shape = SubResource( 3 )
disabled = true

[node name="AudioOpenDoor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
attenuation = 0.63728

[node name="SoundPlayer" type="AnimationPlayer" parent="."]
anims/OpenDoor = SubResource( 4 )
